--- a/Front-end/TodoList/src/index.html
+++ b/Front-end/TodoList/src/index.html
@@ -12,7 +12,7 @@
 </head>
 <body style="background: #fcfcfc;">
   <app-root></app-root>
-  <!--<script src="/assets/public/js/jquery-3.3.1.slim.min.js"></script>-->
-  <!--<script src="/assets/public/js/bootstrap.min.js"></script>-->
+  <script src="/assets/public/js/jquery-3.3.1.slim.min.js"></script>
+  <script src="/assets/public/js/bootstrap.min.js"></script>
 </body>
 </html>
